--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
 .container{
-  margin-top: 30px;
+    margin-top: 30px;
+}
+.bla{
+    /* outline: 1px blue solid; */
+}
+.removeButton{
+    float: right;
 }
