--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,13 @@
 .container{
     margin-top: 30px;
 }
-.bla{
-    /* outline: 1px blue solid; */
+h1{
+    font-size: 100px;
 }
 .removeButton{
-    float: right;
+  float: right;
+  background-color: white;
+  border: 0;
+  color: #6c757d;
+  padding-right: 1.5rem;
 }
